[project]
name = "elevator"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.1",
    "coverage>=7.8.2",
    "pyqt6>=6.9.1",
    "pyzmq>=26.4.0",
    "qasync>=0.27.1",
    "qtpy>=2.4.3",
    "rich>=14.0.0",
    "tornado>=6.5.1",
]

[tool.ruff]
target-version = "py313"
